// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-iwoqQi iNwGdC"
  >
    <div
      className="sc-jmhOSl dIwtrM"
    >
      <ul
        className="sc-cbDwiu sc-hZiMVj eASErZ fyYEjZ"
      >
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            0
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            1
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            2
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            3
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            4
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            5
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            6
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            7
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            8
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            9
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            10
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            11
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            12
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            13
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            14
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            15
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            16
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            17
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            18
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            19
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            20
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            21
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            22
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            23
          </div>
        </li>
        <li
          className="sc-dDaJoQ kFlKqy"
        >
          <div
            className="sc-BIIkq gffPfR"
          >
            24
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex justify-around items-center w-full"
  >
    <div
      className="sc-gVUVPo fDRoWn"
    >
      <div
        className="sc-jmhOSl dIwtrM"
      >
        <ul
          className="sc-cbDwiu sc-hZiMVj eASErZ fyYEjZ"
        >
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              24
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              23
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              22
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              21
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              20
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              19
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              18
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              17
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              16
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              15
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              14
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              13
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              12
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              11
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              10
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              9
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              8
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              7
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              6
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              5
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              4
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              3
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              2
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              1
            </div>
          </li>
          <li
            className="sc-dDaJoQ kFlKqy"
          >
            <div
              className="sc-dexYeb cxIQlK"
            >
              0
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jmhOSl dIwtrM"
  >
    <ul
      className="sc-cbDwiu sc-hZiMVj cIKRJt fyYEjZ"
    >
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-gJfQTX kkXSmt"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-gJfQTX kkXSmt"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-gJfQTX kkXSmt"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-gJfQTX kkXSmt"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-gJfQTX kkXSmt"
        >
          -1
          , 
          -1
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jmhOSl dIwtrM"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to left
    </button>
    <ul
      className="sc-cbDwiu sc-hZiMVj eASErZ fyYEjZ"
    >
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          0
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          1
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          2
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          3
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          4
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          5
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          6
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          7
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          8
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          9
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          10
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          11
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          12
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          13
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          14
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          15
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          16
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          17
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          18
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          19
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          20
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          21
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          22
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          23
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          24
        </div>
      </li>
    </ul>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to Right
    </button>
  </div>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jmhOSl dIwtrM"
  >
    <ul
      className="sc-cbDwiu sc-hZiMVj cIKRJt fyYEjZ"
    >
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          0
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          1
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          2
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          3
        </div>
      </li>
      <li
        className="sc-dDaJoQ kFlKqy"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          4
        </div>
      </li>
    </ul>
  </div>
</div>
`;
